adguard/deploy.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: adguard
  namespace: adguard
  annotations:
    keel.sh/policy: force
    keel.sh/match-tag: "true"
    keel.sh/trigger: poll
spec:
  serviceName: adguard
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: adguard
  template:
    metadata:
      labels:
        app: adguard
        name: adguard
    spec:
      restartPolicy: Always
      automountServiceAccountToken: false
      hostNetwork: true
      containers:
      - name: adguard
        image: docker.io/adguard/adguardhome:v0.107.55
        imagePullPolicy: Always
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: false
          seccompProfile:
            type: RuntimeDefault
        resources:
          requests:
            cpu: 150m
            memory: 150Mi
          limits:
            cpu: 1200m
            memory: 500Mi
        ports:
        - containerPort: 3000
          name: http
          protocol: TCP
        # - containerPort: 53
        #   name: dns-tcp
        #   protocol: TCP
        # - containerPort: 53
        #   name: dns-udp
        #   protocol: UDP
        - containerPort: 853
          name: dns-tls-853
          protocol: TCP
        livenessProbe:
          failureThreshold: 10
          httpGet:
            path: /login.html
            port: http
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /login.html
            port: http
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        volumeMounts:
        - name: adguard-conf
          mountPath: /opt/adguardhome/conf
        - name: adguard-work
          mountPath: /opt/adguardhome/work
        - name: dns-wildcard-cert
          mountPath: /etc/certs
          readOnly: true
      volumes:
      - name: adguard-conf
        persistentVolumeClaim:
          claimName: adguard-conf
      - name: adguard-work
        persistentVolumeClaim:
          claimName: adguard-work
      - name: dns-wildcard-cert
        secret:
          secretName: letsencrypt-dns-wildcard-cert
