adguard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-web
  namespace: adguard
  labels:
    app: adguard
    tailscale.com/proxy-class: "enable-tun"
  annotations:
    tailscale.com/expose: 'true'
    tailscale.com/hostname: 'cloud-adguard'
spec:
  type: ClusterIP
  ports:
  - name: adguard-web
    port: 3000
    protocol: TCP
    targetPort: http
  selector:
    app: adguard

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: adguard
  name: adguard-dns
  namespace: adguard
  annotations:
    metallb.universe.tf/loadBalancerIPs: 10.0.0.153
    io.cilium/lb-ipam-ips: 10.0.0.153
spec:
  type: LoadBalancer
  externalTrafficPolicy: Cluster
  loadBalancerIP: 10.0.0.153
  ports:
  - name: dns-tcp
    nodePort: 30725
    port: 53
    protocol: TCP
    targetPort: dns-tcp
  - name: dns-udp
    nodePort: 30725
    port: 53
    protocol: UDP
    targetPort: dns-udp
  - name: dns-tls-853
    nodePort: 32700
    port: 853
    protocol: TCP
    targetPort: dns-tls-853
  selector:
    app: adguard
