adguard/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: adguard
  namespace: adguard
  annotations:
    external-dns.alpha.kubernetes.io/target: 'onode1.ucdialplans.com'
spec:
  parentRefs:
  - name: tls
    namespace: cilium
    sectionName: https
  hostnames:
  - "cloud-adguard.ucdialplans.com"
  rules:
  - backendRefs:
    - name: adguard-web
      namespace: adguard
      kind: Service
      port: 3000
