adguard/networkpolicy_DISABLED.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: adguard
  namespace: adguard
spec:
  podSelector:
    matchLabels:
      app: adguard
  policyTypes:
    - Egress
  ingress:
    - from:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              app: external-dns
      ports:
        - port: 3000
    - from:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              app: cloudflare-tunnel
      ports:
        - port: 443
        - port: 3000
    - from:
        - podSelector: {}
    - from:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - port: 53
          protocol: UDP
        - port: 853
        - port: 443
  egress:
    - to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
    - to:
        - podSelector: {}
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - port: 53
          protocol: UDP
        - port: 80
        - port: 443
        - port: 853
